Added welcome screen and welcome animation.
Fixed some bugs

--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/image_unsplash_photo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:src="@drawable/ic_launcher_background"
+                tools:src="@tools:sample/avatars"
                 android:scaleType="centerCrop"/>
 
             <View
