--- a/app/src/main/res/layout/fragment_favorite_photos.xml
+++ b/app/src/main/res/layout/fragment_favorite_photos.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.simplephotoapp.ui.FavoritePhotosFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_favorite_photos"
         android:layout_width="match_parent"
-        tools:listitem="@layout/photo_item"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_height="match_parent"/>
-
+        tools:listitem="@layout/photo_item" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
